terraform/environments/acceptance/deployments/api-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kube-test-container
  name: kube-test-container
spec:
  replicas: 5
  selector:
    matchLabels:
      app: kube-test-container
  template:
    metadata:
      labels:
        app: kube-test-container
    spec:
      containers:
      - name: kube-test-container
        image: sverrirab/kube-test-container:v1.0
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 2
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 10Mi
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 1
          periodSeconds: 1
---
kind: Service
apiVersion: v1
metadata:
  name: kube-test-container
spec:
  selector:
    app: kube-test-container
  ports:
    - port: 8000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kube-test-container-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: api.aws-eks.be
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-test-container
          servicePort: 8000
