terraform/environments/acceptance/deployments/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress-rules
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: api.aws-eks.be
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-stack-grafana
          servicePort: 80
